openshift/home-assistant.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app: home-assistant
spec:
  replicas: 1
  selector:
    app: home-assistant
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        alpha.image.policy.openshift.io/resolve-names: '*'
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: home-assistant:latest
          ports:
            - containerPort: 8123
          securityContext:
            allowPrivilegeEscalation: true
            runAsUser: 0
          volumeMounts:
            - mountPath: "/config"
              name: ha-persistent-storage
            - mountPath: "/config/configuration.yaml"
              subPath: "configuration.yaml"
              name: ha-config
      volumes:
        - name: ha-config
          secret:
            secretName: ha-config
            defaultMode: 0777
        - name: ha-persistent-storage
          persistentVolumeClaim:
            claimName: ha-pvc
      serviceAccount: home-assistant
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - home-assistant
        from:
          kind: ImageStreamTag
          name: 'home-assistant:latest'
          namespace: home-assistant
    - type: ConfigChange
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  type: ClusterIP
  selector:
    app: home-assistant
  ports:
    - name: https
      protocol: TCP
      port: 80
      targetPort: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ha-ingress
  namespace: home-assistant
spec:
  ingressClassName: openshift-default
  rules:
  - host: home-assistant.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant
            port:
              number: 80
